--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Full Name</title>
+    <title>Khushboo kumari</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <link rel="icon" href="/images/profile.png" type="image/png">
