i have changed name and institute

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           "@graph": [
             {
               "@type": "Person",
-              "name": "Full Name",
-              "givenName": "First Name",
-              "familyName": "Last Name",
-              "description": "Brief description about the person",
-              "jobTitle": "Job Title",
+              "name": "Ms Khushboo Kumari",
+              "givenName": "Khushboo",
+              "familyName": "Kumari",
+              "description": "Research Scholar at Centre for Climate Studies at IIT Bombay",
+              "jobTitle": "Research Scholar",
               "url": "https://yourdomain.com",
               "image": "https://yourdomain.com/images/profile.png",
               "sameAs": [
@@ -104,8 +104,8 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h1>FULL NAME</h1>
-                        <p>Job Title, Institute Name</p>
+                        <h1>Khushboo Kumari</h1>
+                        <p>PhD Scholar at IIT Bombay</p>
                         <p>This is a short paragraph about yourself. Describe your research interests, professional background, or project involvement in 2–3 sentences.</p>
                         <div class="social-links">
                             <a href="https://scholar.google.com" target="_blank" class="social-icon">
